@@ -23,6 +23,7 @@ misc improvements
 	-reusable TMs (Lunos)
  	-forgettable HMs (Lunos, thespbgamer, Jaizu)
 	-prompt for reusing repels (ExpoSeed)
+	-more bonus premier balls, like in LGPE (BuffelSalt)
 	-keyboard auto-switches to lowercase (Jaizu)
 	-faster text speed (ellabrella)
 	-using medicine no longer returns you to the bag automatically (ghoulslash)
